--- a/RIBOflaskapp/templates/base.html
+++ b/RIBOflaskapp/templates/base.html
@@ -21,7 +21,7 @@
   </head>
   <body>
     <div id="nav">
-        {% include "nav_bar_giusta.html" %}
+        {% include "nav_bar_prova.html" %}
     </div>
     <div class="container">
         {% block content %} {% endblock %}
