Completato css per la navigation bar, per le pagine search e search_results
Completato css per la navigation bar, per le pagine search e search_results. Manca il css per le altre pagine

Co-Authored-By: DeniseFalcone <93253264+DeniseFalcone@users.noreply.github.com>

--- a/RIBOflaskapp/templates/nav_bar.html
+++ b/RIBOflaskapp/templates/nav_bar.html
@@ -27,7 +27,7 @@
                         <img id="unicam_text" src="{{ url_for('static', filename='img/UNICAM_scritta.webp') }}" width="126" height="40">
                     </a>
                 </label>
-                <nav class="navbar_prova">
+                <nav class="nav_bar">
                     <ul>
                         <li><a href="{{ url_for('home') }}">Home</a></li>
                         <li><a href="{{ url_for('search') }}">Search</a></li>
