--- a/RIBOflaskapp/templates/search_results.html
+++ b/RIBOflaskapp/templates/search_results.html
@@ -38,7 +38,7 @@
                 <td>
                     {{ element['Rna Type'] }}
                 </td>
-                <td  class="more_info" data-toggle="modal" data-target="#exampleModal{{ element['Benchmark ID'] }}" onclick="show_taxonomy('{{ element['Benchmark ID'] }}')">
+                <td class="more_info" data-toggle="modal" data-target="#exampleModal{{ element['Benchmark ID'] }}" onclick="show_taxonomy('{{ element['Benchmark ID'] }}')">
                    ...
                 </td>
             </tr>
@@ -117,10 +117,10 @@
             <label for="ct"> ct format</label><br>
             <input class="check_button_format" type="checkbox" id="ct_nH" value="nH.ct">
             <label for="ct_nh"> ct-nH format</label><br>
-            <input class="check_button_format" type="checkbox" id="db" value=".db">
-            <label for="db"> db format</label><br>
-            <input class="check_button_format" type="checkbox" id="db_nh" value="nH.db">
-            <label for="db_nh"> db-nH format</label><br>
+            <input class="check_button_format" type="checkbox" id="db" value=".dbn">
+            <label for="db"> dbn format</label><br>
+            <input class="check_button_format" type="checkbox" id="db_nh" value="nH.dbn">
+            <label for="db_nh"> dbn-nH format</label><br>
             <!--<progress id="progress_bar" value=gino_value max="100" min="0" ></progress>-->
         </div>
 
