--- a/RIBOflaskapp/static/css/style.css
+++ b/RIBOflaskapp/static/css/style.css
@@ -1,14 +1,11 @@
 *{
     font-family: montserrat;
 }
-/*
-h1{
-    text-transform: uppercase;
-    text-align: center;
-    font-size: xxx-large;
-    margin-top: -35px;
+
+.container {
+    margin-top: 150px;
 }
-*/
+
 h1 {
     margin-top: -75px;
     font-size: 40px;
@@ -28,25 +25,7 @@ h1:hover {
   cursor: default;
 }
 
-#dl_option {
-  margin-top: 15px;
-  font-size: 20px;
-  text-transform: uppercase;
-  font-family: 'Gambetta', serif;
-  letter-spacing: -1px;
-  transition: 700ms ease;
-  font-variation-settings: "wght" 311;
-  color: darkred;
-  outline: none;
-  text-align: center;
-}
-
-#dl_option:hover {
-  font-variation-settings: "wght" 582;
-  letter-spacing: 1px;
-    cursor: default;
-}
-
+/* nav_bar */
 header{
     background: #1b3b5d;
     top: 0;
@@ -60,28 +39,10 @@ header{
     justify-content: space-between;
     z-index: 1000;
 }
-
 body {
     min-height: 100vh;
     background: #E0EAF6 center;
 }
-
-/* vecchio
-body{
-   background: white;
-    margin: 0;
-    padding: 0;
-}*/
-/*
-.dropdown{
-    margin: 0 auto;
-}*
-/*
-nav{
-    height: 80px;
-    background: #1b3b5d;
-}*/
-
 label.logo{
     line-height: 80px;
     padding: 10px 30px;
@@ -91,7 +52,6 @@ label.logo{
     cursor: pointer;
     margin-left: -100px;
 }
-
 label.text-logo{
     line-height: 80px;
     margin-left: 125px;
@@ -99,37 +59,21 @@ label.text-logo{
     z-index: 2;
     cursor: pointer;
 }
-
-header .navbar_prova {
+header .nav_bar {
     height: 70px;
 }
-
-header .navbar_prova ul {
+header .nav_bar ul {
     list-style: none;
     float: left;
     cursor: pointer;
 }
-
-/*
-nav ul{
-    padding: 0;
-    float: right;
-    margin: 0 30px 0 0;
-}*/
-
-header .navbar_prova ul li{
+header .nav_bar ul li{
     background: #1b3b5d;
     position: relative;
     list-style: none;
     display: inline-block;
 }
-
-/*
-.td_check_btn{
-  width: 30px;
-}*/
-
-header .navbar_prova ul li a{
+header .nav_bar ul li a{
     display: block;
     color: white;
     text-decoration: none;
@@ -137,30 +81,30 @@ header .navbar_prova ul li a{
     padding: 20px;
     cursor: pointer;
 }
-header .navbar_prova ul li a:hover{
+header .nav_bar ul li a:hover{
     text-decoration: underline;
     background: #1b3b5d;
     color: #b0cbe8;
 }
 
-header .navbar_prova ul li ul {
+header .nav_bar ul li ul {
     position: absolute;
     left: 0;
     width: 200px;
     background: #1b3b5d;
     display: none;
 }
-header .navbar_prova ul li ul li{
+header .nav_bar ul li ul li{
     width: 200px;
     margin-left: -40px;
     top: -1px;
 }
-header .navbar_prova ul li ul li ul{
+header .nav_bar ul li ul li ul{
     left: 200px;
-    top: 0px;
+    top: 0;
 }
-header .navbar_prova ul li:focus-within>ul,
-header .navbar_prova ul li:hover>ul{
+header .nav_bar ul li:focus-within>ul,
+header .nav_bar ul li:hover>ul{
     display: initial;
 }
 #mn_bars{
@@ -169,36 +113,8 @@ header .navbar_prova ul li:hover>ul{
 i.fas.fa-bars{
     display: none;
 }
-/*
-nav ul li a{
-    display: block;
-    padding: 0 15px;
-    color: white;
-    border-radius: 3px;
-    text-transform: uppercase;
-    text-decoration: none;
-    line-height: 80px;
-    font-size: 16px;
-    z-index: 1;
-}*/
 
-/*
-nav ul ul li{
-    z-index: 1;
-}*/
-
-.checkbtn{
-    font-size: 30px;
-    color: white;
-    float: right;
-    line-height: 80px;
-    margin-right: 40px;
-    cursor: pointer;
-    display: none;
-}
-#check{
-    display: none;
-}
+/* search */
 
 #search_table {
     border: 2px solid #1b3b5d;
@@ -212,6 +128,10 @@ input#leng_f, input#leng_t, input#weak_f, input#weak_t {
     width: 122px;
 }
 
+#search_box{
+    vertical-align: middle;
+    align-items: center;
+}
 
 #search_table td{
     font-size: 15px;
@@ -241,15 +161,9 @@ input#leng_f, input#leng_t, input#weak_f, input#weak_t {
     border: 2px solid white;
     color: white;
     background:  #1b3b5d ;
-    box-shadow: 10px 10px 0px #3778be;
+    box-shadow: 10px 10px 0 #3778be;
     top: -5px;
     left:-5px;
-}
-.more_info{
-    width: auto;
-    text-align: center;
-    font-weight: bolder;
-    font-size: 20px;
 }
 
 #search_button_div{
@@ -270,91 +184,156 @@ input#leng_f, input#leng_t, input#weak_f, input#weak_t {
     font-size: 18px;
  }
 
-@media(max-width: 991px){
-    header{
-        padding: 20px;
-    }
-    #mn_bars,i.fas.fa-bars{
-        display: initial;
-        font-size: 20px;
-        cursor: pointer;
-        color: white;
-        margin-left: -45px;
-    }
-    #logo_lab{
-       width: 80px;
-       height: 80px;
-       margin-left: 60px;
-    }
-    #logo_uni{
-       width: 70px;
-       height: 85px;
-    }
-    header label .logo{
-        top: 0px;
-        padding: 5px;
-        position: absolute;
-        z-index: 2;
-    }
-    #unicam_text{
-        margin-left: 30px;
-    }
-    header .navbar_prova{
-        position: absolute;
-        top: 100%;
-        left: 0;
-        right: 0;
-        display: none;
-        background: #1b3b5d;
-    }
-    header .navbar_prova ul{
-        padding: 0;
-        width: 100%;
-    }
-    header .navbar_prova ul li{
-        width: 100%;
-    }
-    header .navbar_prova ul li a{
-        width: 100%;
-    }
-    header .navbar_prova ul li ul{
-        position: relative;
-        width: 100%;
-        padding: 0px 0px 0px 40px;
-    }
-    header .navbar_prova ul li ul li{
-        background: #1b3b5d;
-    }
-    header .navbar_prova ul li ul li ul{
-        width: 100%;
-        left: 0;
-        padding: 0px 0px 0px 40px;
-    }
-    header .navbar_prova ul li ul li ul li{
-        width: 100%;
-    }
-    #mn_bars:checked ~ .navbar_prova{
-        display: initial;
-    }
-    #search_table, #search_table tr, #search_table td{
-        display: block;
-    }
-    #search_table{
-        background: #D0E0F1 ;
-    }
-    #search_table td:nth-child(1), #search_table td:nth-child(3) {
-        background: #D0E0F1 ;
-        white-space: nowrap;
-        width: auto;
-    }
-    #search_table td:nth-child(2), #search_table td:nth-child(4){
-        background-color:#D0E0F1;
-        width: 1px;
-        white-space: nowrap;
-    }
-    #search_button, #reset_button, #s_tutorial_btn{
-        margin: 7px;
-    }
+/* search result */
+
+#choose_taxonomy_div{
+    text-align: center;
+    border: 3px solid black;
+    border-radius: 15px;
+    margin: 15px;
+    color: black;
+    width: 202px;
+}
+
+#dl_button{
+    border-radius: 15px;
+    font-size: 20px;
+}
+
+#download_div {
+    text-align: center;
+    border: 3px solid black;
+    border-radius: 15px;
+    color: black;
+    margin: 15px;
+    width: 200px;
+}
+
+.popover-test{
+    text-decoration: underline;
+    color: #1b3b5d;
+}
+
+.popover-test:hover{
+    cursor: pointer;
+}
+
+#result_table {
+    width: 500px;
+    text-align: left;
+    border-collapse: collapse;
+    color: #2E2E2E;
+    border: #A4A4A4;
+}
+
+#result_table tr:hover {
+    background-color: #b0cbe8;
+    cursor: pointer;
+
+}
+
+#result_table .hidden_row {
+    display: none;
+}
+
+.modal-body{
+    text-align: initial;
+    font-size: 18px;
+}
+.modal-title, #taxonomies{
+    font-weight: bold;
+    font-size: 19px;
+}
+
+#taxa_container {
+    display: grid;
+    grid-template-areas: 'header header header header header';
+}
+
+.taxa_div{
+    text-align: center;
+    border: 1px solid black;
+    padding: 20px;
+}
+
+#taxa_name {
+    grid-area: header;
+    background-color: #E0EAF6;
+    border: 1px solid black;
+}
+
+
+.result_table {
+  white-space: nowrap;
+}
+
+.result_table th {
+  border-collapse: collapse;
+  width: 100%;
+  border: 1px solid black;
+  text-align: center;
+}
+
+.result_table tr {
+  border: 1px solid black;
+}
+
+.result_table tr td{
+  border: 1px solid black;
+  white-space: nowrap;
+  text-align: center;
+}
+
+.container_table {
+    margin-left: -100px;
+    padding: 32px;
+    text-align: center;
+}
+
+#dl_option_div{
+    vertical-align: middle;
+    margin-right: 30px;
+    position: fixed;
+    display: inline-block;
+}
+
+#selection_download{
+    display: flex;
+}
+
+#table_result_div{
+    display: inline-block;
+    padding: 16px 16px;
+    margin-left: -315px;
+}
+
+#dl_option {
+  margin-top: 15px;
+  font-size: 20px;
+  text-transform: uppercase;
+  font-family: 'Gambetta', serif;
+  letter-spacing: -1px;
+  transition: 700ms ease;
+  font-variation-settings: "wght" 311;
+  color: darkred;
+  outline: none;
+  text-align: center;
+}
+
+#dl_option:hover {
+  font-variation-settings: "wght" 582;
+  letter-spacing: 1px;
+    cursor: default;
+}
+.more_info{
+    width: auto;
+    text-align: center;
+    font-weight: bolder;
+    font-size: 20px;
+}
+
+@media (max-width: 1286px) {
+    /* result table */
     #result_table, #result_table td, #result_table tr,
     #result_table th, #result_table tbody, #result_table thead {
         display:block;
@@ -410,7 +389,6 @@ input#leng_f, input#leng_t, input#weak_f, input#weak_t {
         font-weight: initial;
         font-size: 16px;
     }
-
     #dl_option_div{
         position: initial;
         display: inline-block;
@@ -419,308 +397,106 @@ input#leng_f, input#leng_t, input#weak_f, input#weak_t {
         margin-left: auto;
     }
 }
-/*
-@media (max-width: 858px){
-    .checkbtn{
-        display:block;
-    }
-    ul{
-        position: fixed;
-        width: 100%;
-        height: 100vh;
-        background: #295a8e;
-        top: 80px;
-        left: -100%;
-        text-align: center;
-        transition: all .5s;
-    }
-    nav ul li{
-        display: block;
-        background: #295a8e;
-        margin: 50px 0;
-        line-height: 30px;
-        z-index: 1;
-    }
-    nav ul li a{
-        font-size: 20px;
-        z-index: 1;
-    }
-    nav ul ul li a{
-        display: block;
-        background: #3778be;
-        margin: 50px 0;
-        line-height: 30px;
-        z-index: 1;
-    }
-    nav ul ul ul li a{
-        display: block;
-        background: #3778be;
-        margin: 50px 0;
-        line-height: 30px;
-        z-index: 1;
-    }
-    a.active{
-        background: none;
-        color: #12283f;
-    }
-    a:hover{
-        background: none;
-        color: black;
-    }
-    #check:checked ~ ul{
-        left: 0;
-    }
 
+@media(max-width: 991px){
+    /* nav_bar */
+
+    header{
+        padding: 20px;
+    }
+    #mn_bars,i.fas.fa-bars{
+        display: initial;
+        font-size: 20px;
+        cursor: pointer;
+        color: white;
+        margin-left: -45px;
+    }
+    #logo_lab{
+       width: 80px;
+       height: 80px;
+       margin-left: 60px;
+    }
+    #logo_uni{
+       width: 70px;
+       height: 85px;
+    }
+    header label .logo{
+        top: 0;
+        padding: 5px;
+        position: absolute;
+        z-index: 2;
+    }
+    #unicam_text{
+        margin-left: 30px;
+    }
+    header .nav_bar{
+        position: absolute;
+        top: 100%;
+        left: 0;
+        right: 0;
+        display: none;
+        background: #1b3b5d;
+    }
+    header .nav_bar ul{
+        padding: 0;
+        width: 100%;
+    }
+    header .nav_bar ul li{
+        width: 100%;
+    }
+    header .nav_bar ul li a{
+        width: 100%;
+    }
+    header .nav_bar ul li ul{
+        position: relative;
+        width: 100%;
+        padding: 0 0 0 40px;
+    }
+    header .nav_bar ul li ul li{
+        background: #1b3b5d;
+    }
+    header .nav_bar ul li ul li ul{
+        width: 100%;
+        left: 0;
+        padding: 0 0 0 40px;
+    }
+    header .nav_bar ul li ul li ul li{
+        width: 100%;
+    }
+    #mn_bars:checked ~ .nav_bar{
+        display: initial;
+    }
+    /* search */
     #search_table, #search_table tr, #search_table td{
         display: block;
     }
     #search_table{
-        background: #D0E0F1;
+        background: #D0E0F1 ;
+    }
+    #search_table td:nth-child(1), #search_table td:nth-child(3) {
+        background: #D0E0F1 ;
+        white-space: nowrap;
+        width: auto;
     }
     #search_table td:nth-child(2), #search_table td:nth-child(4){
-    background-color:#D0E0F1;
-    width: 1px;
-    white-space: nowrap;
-}
-    #search_table td:nth-child(1), #search_table td:nth-child(3){
+        background-color:#D0E0F1;
+        width: 1px;
         white-space: nowrap;
-        background: #D0E0F1;
     }
     #search_button, #reset_button, #s_tutorial_btn{
         margin: 7px;
     }
-     #result_table, #result_table td, #result_table tr,
-    #result_table th, #result_table tbody, #result_table thead {
-        display:block;
-    }
-      #result_table{
-        margin-left: auto;
-    }
-    #result_table thead tr {
-        position: absolute;
-        top: -9999px;
-        left: -9999px;
-    }
-    #result_table tr{
-        border: 1px solid black;
-    }
-    #result_table td{
-        border: none;
-        border-bottom: 1px solid black;
-        position: relative;
-        padding-left: 50%;
-    }
-    #result_table td:before{
-        position: absolute;
-        top: 6px;
-        left: 6px;
-        width: 45%;
-        padding-right: 10px;
-        white-space: nowrap;
-    }
-    #result_table td:nth-of-type(1){
-        padding-right: 0;
-    }
-     #result_table td:nth-of-type(1):before{
-         content: "Select";
-    }
-    #result_table td:nth-of-type(2):before{
-        content: "Organism name";
-    }
-    #result_table td:nth-of-type(3):before{
-        content: "Reference ID";
-    }
-    #result_table td:nth-of-type(4):before{
-        content: "Accession number";
-    }
-    #result_table td:nth-of-type(5):before{
-        content: "RNA Type";
-    }
-    #result_table td:nth-of-type(6):before{
-        content: "More information";
-        font-weight: initial;
-        font-size: 16px;
-    }
-    #table_result_div{
-        margin-left: auto;
-    }
-    #dl_option_div{
-        position: initial;
-        display: inline-block;
-    }
-    .DataTables_wrapper .DataTables_info{
-        margin: auto;
-    }
-
-}
-*/
-
-
-/*
-nav ul ul{
-    position: absolute;
-    top: 80px;
-    display: none;
-}
-
-nav ul li:hover>ul{
-    display: block;
-    text-decoration: none;
-    color: black;
-}
-
-nav ul ul li{
-    width: 150px;
-    float: none;
-    display: list-item;
-    position: relative;
-}
-
-nav ul ul ul li{
-    position: relative;
-    top: -80px;
-    left: 150px;
-}
-
-nav ul li a i{
-    margin: 5px;
-}
-*/
-.container {
-    margin-top: 150px;
-}
-
-.result_table {
-  white-space: nowrap;
-}
-
-.result_table th {
-  border-collapse: collapse;
-  width: 100%;
-  border: 1px solid black;
-  text-align: center;
-}
-
-.result_table tr {
-  border: 1px solid black;
-}
-
-.result_table tr td{
-  border: 1px solid black;
-  white-space: nowrap;
-  text-align: center;
-}
-
-
-/* Tabella che si espande*/
-
-
-.container_table {
-    margin-left: -100px;
-    padding: 32px;
-    text-align: center;
-}
-
-#dl_option_div{
-    vertical-align: middle;
-    margin-right: 30px;
-    position: fixed;
-    display: inline-block;
-}
-
-#selection_download{
-    display: flex;
-}
-
-
-#table_result_div{
-    display: inline-block;
-    padding: 16px 16px;
-    margin-left: -315px;
-}
-
-
-#result_table {
-    width: 500px;
-    text-align: left;
-    border-collapse: collapse;
-    color: #2E2E2E;
-    border: #A4A4A4;
-}
-
-#result_table tr:hover {
-    background-color: #b0cbe8;
-    cursor: pointer;
 
 }
 
-#result_table .hidden_row {
-    display: none;
-}
 
-.modal-body{
-    text-align: initial;
-    font-size: 18px;
-}
-.modal-title, #taxonomies{
-    font-weight: bold;
-    font-size: 19px;
-}
 
-#taxa_container {
-    display: grid;
-    grid-template-areas: 'header header header header header';
-}
 
-.taxa_div{
-    text-align: center;
-    border: 1px solid black;
-    padding: 20px;
-}
 
-#taxa_name {
-    grid-area: header;
-    background-color: #E0EAF6;
-    border: 1px solid black;
-}
-.popover-test{
-    text-decoration: underline;
-    color: #1b3b5d;
-}
 
-.popover-test:hover{
-    cursor: pointer;
-}
 
-#download_div {
-    text-align: center;
-    border: 3px solid black;
-    border-radius: 15px;
-    color: black;
-    margin: 15px;
-    width: 200px;
-}
 
-#search_box{
-    vertical-align: middle;
-    align-items: center;
-}
 
-#choose_taxonomy_div{
-    text-align: center;
-    border: 3px solid black;
-    border-radius: 15px;
-    margin: 15px;
-    color: black;
-    width: 202px;
-}
 
-#dl_button{
-    border-radius: 15px;
-    font-size: 20px;
-}
 
-#output {
-    text-align: left;
 
-}
