--- a/website_management/templates/search.html
+++ b/website_management/templates/search.html
@@ -90,6 +90,8 @@
                             <option value="16S">16S</option>
                             <option value="23S">23S</option>
                             <option value="Group I Introns">Group I Introns</option>
+                            <option value="Group II Introns">Group II Introns</option>
+                            <option value="tRNA">tRNA</option>
                             <option value="Other">Others</option>
                         </select></td>
                         <td><a>Taxon:</a></td>
