--- a/website_management/templates/nav_bar.html
+++ b/website_management/templates/nav_bar.html
@@ -16,13 +16,18 @@
                 <a href="http://www.emanuelamerelli.eu/bigdata/doku.php?id=start">
                     <img id="logo_lab" src="{{ url_for('static', filename='img/logo_lab_bioShape.png') }}" width="100" height="100">
                 </a>
-                <a href="{{ url_for('home') }}">
+                <a href="https://www.unicam.it/">
                     <img id="logo_uni" src="{{ url_for('static', filename='img/UNICAM_logo.png') }}" width="80" height="95">
                 </a>
             </label>
             <label class="text-logo" >
-                <a href="{{ url_for('home') }}">
+                <a href="https://www.unicam.it/">
                     <img id="unicam_text" src="{{ url_for('static', filename='img/UNICAM_scritta.webp') }}" width="126" height="40">
+                </a>
+            </label>
+            <label class="text-logo" >
+                <a href="{{ url_for('home') }}">
+                    <img id="PhyloRNA_title" src="{{ url_for('static', filename='img/PhyloRNA_title.png') }}" width="158" height="75">
                 </a>
             </label>
             <nav class="nav_bar">
