--- a/website_management/templates/search_results.html
+++ b/website_management/templates/search_results.html
@@ -67,7 +67,8 @@
                                     <p name="hidden_element">Shape: {{ element['Shape'] }}</p>
                                     <p name="hidden_element">Reference ID: {{ element['Benchmark ID'] }}</p>
                                     <p name="hidden_element">Database name: {{ element['Reference database'] }}</p>
-                                    <!--<p name="hidden_element">Database link: inserire campo db link</p>-->
+                                    <p name="hidden_element">Reference: {{ element['Reference'] }}</p>
+                                    <p name="hidden_element">Description: {{ element['Description'] }}</p>
                                     <hr>
                                     <p id="taxonomies">TAXONOMIES</p>
                                     <div id='taxa_container'>
