Sistemato problema download
Sistemato problema download dove il donwload è limitato a 5000 elementi. Ora non si blocca più.

Co-Authored-By: Chiara Cintioni <83300887+chiara-cintioni@users.noreply.github.com>

--- a/website_management/templates/search_results.html
+++ b/website_management/templates/search_results.html
@@ -141,6 +141,7 @@
             </div>
         </div>
         <button type="button"  id="dl_button" onclick="final_download()">Download</button>
+        <progress id="download-progress" max="100" value="0"></progress>
     </div>
     <p id="hidden_ref_array" hidden></p>
 </div>
